feat: edit struktur direktori dasar untuk source code dan membuat TODO -imam